# alfred-arduino-cli

./: .gitignore  .gon.hcl  README.md  arduino-cli.py  info.plist  pyproject.toml
