[tool.poetry]
name = "alfred-arduino-cli"
version = "0.1.0"
description = ""
authors = ["Maurizio Branca <m.branca@arduino.cc>"]

[tool.poetry.dependencies]
python = "2.7.16"
invoke = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
